some minor changes
some minor changes

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -49,7 +49,7 @@ h6 { font-size: .6em; }
   }
 }
 
-.shortbio, musicplayer {
+.shortbio, .musicplayer {
   font-size: .6em;
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
