Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -155,7 +155,7 @@
         <center>
             Travis Scott feat. Kendrick Lamar - Goosebumps
             <audio controls autoplay>
-                <source id="musicplayer" src="musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3" type="audio/mpeg">
+                <source id="musicplayer" type="audio/mpeg">
               </audio>
 
               <script>
