Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -172,7 +172,7 @@
                 var musicPathSrc = '';
 
                 if(isMainTab) {
-                    musicPathSrc = 'musics/images/protrait-2d-1.png';    
+                    musicPathSrc = 'musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';    
                 }
                 else {
                     musicPathSrc = '../musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';
