Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -157,7 +157,7 @@
         <center>
             Travis Scott feat. Kendrick Lamar - Goosebumps
             <audio controls autoplay>
-                <source id="musicplayer" type="audio/mpeg">
+                <source id="musicplayer" src="" type="audio/mpeg">
               </audio>
 
               <script>
