Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -173,10 +173,10 @@
                 var musicPathSrc = '';
 
                 if(isMainTab) {
-                    musicPathSrc = 'musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';    
+                    musicPathSrc = '../musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';    
                 }
                 else {
-                    musicPathSrc = '../musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';
+                    musicPathSrc = '../../musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';
                 }
 
                 var musicPlayerElem = document.getElementById("musicplayer");
