Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -155,6 +155,7 @@
       <div class="musicplayer">
         <center>
             Travis Scott feat. Kendrick Lamar - Goosebumps
+            <iframe src="audio/silence.mp3" allow="autoplay" style="display:none"></iframe>
             <audio controls autoplay>
                 <source id="musicplayer" src="" type="audio/mpeg">
               </audio>
