Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -7,6 +7,9 @@
 .icon-vsco:before {
   content: "\e901";
 }
+    
+audio { width: 200px; height: 20px}
+
 </style>
 
 <link rel="stylesheet" href="/apps-brands-social-icons/style.css">
