Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -8,7 +8,14 @@
   content: "\e901";
 }
     
-audio { width: 200px; height: 20px}
+audio { 
+   width: 200px; height: 20px
+}
+    
+br {
+   display: block;
+   margin: 10px 0;
+}
 
 </style>
 
