Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -197,6 +197,7 @@ br {
                 var musicPlayerElem = document.getElementById("musicplayer");
 
                 musicPlayerElem.src = musicPathSrc;
+                console.log(musicPlayerElem)
               </script>
         </center>
       </div>
