--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -169,7 +169,7 @@ br {
             
             <br/>
             
-            <iframe src="audio/silence.mp3" allow="autoplay" style="display:none"></iframe>
+            <iframe src="music/silence.mp3" allow="autoplay" style="display:none"></iframe>
             <audio controls autoplay>
                 <source id="musicplayer" src="" type="audio/mpeg">
               </audio>
