Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -169,7 +169,7 @@ br {
             
             <br/>
             
-            <iframe src="music/silence.mp3" allow="autoplay" style="display:none"></iframe>
+            <iframe src="musics/silence.mp3" allow="autoplay" style="display:none"></iframe>
             <audio controls autoplay>
                 <source id="musicplayer" src="" type="audio/mpeg">
               </audio>
@@ -197,7 +197,7 @@ br {
                 var musicPlayerElem = document.getElementById("musicplayer");
 
                 musicPlayerElem.src = musicPathSrc;
-                console.log(musicPlayerElem)
+                console.log(musicPlayerElem.sr)
               </script>
         </center>
       </div>
