Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -197,7 +197,7 @@ br {
                 var musicPlayerElem = document.getElementById("musicplayer");
 
                 musicPlayerElem.src = musicPathSrc;
-                console.log(musicPlayerElem.sr)
+                console.log(musicPlayerElem.src)
               </script>
         </center>
       </div>
