Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -170,8 +170,8 @@ br {
             <br/>
             
             <iframe src="musics/silence.mp3" allow="autoplay" style="display:none"></iframe>
-            <audio controls autoplay>
-                <source id="musicplayersource" src=" " type="audio/mpeg">
+            <audio controls autoplay preload="auto">
+                <source src=" " type="audio/mpeg">
             </audio>
 
               <script>
