Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -13,9 +13,8 @@ audio {
 }
     
 br {
-   display: block;
    height: 2px;
-   line-height: 6px;
+   line-height: 2px;
 }
 
 </style>
@@ -170,7 +169,7 @@ br {
             <br/>
             
             <iframe src="musics/silence.mp3" allow="autoplay" style="display:none"></iframe>
-            <audio id="musicplayersource" controls autoplay preload="auto">
+            <audio id="musicplayersource" controls preload="auto">
                 <source src=" " type="audio/mpeg">
             </audio>
 
