Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -192,7 +192,7 @@ br {
                     musicPathSrc = '../musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';    
                 }
                 else {
-                    silencePreloadPathSrc = '../musics/silence.mp3';
+                    silencePreloadPathSrc = '../../musics/silence.mp3';
                     musicPathSrc = '../../musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3';
                 }
 
