Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -12,9 +12,8 @@ audio {
    width: 400px; height: 20px
 }
     
-.br {
-   height: 2px;
-   line-height: 2px;
+br {
+   font-size: 10%;
 }
 
 </style>
