Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -208,6 +208,15 @@ audio {
             All rights reserved
           </div>
       </center>
+    
+      <br>
+        
+      <center>
+        <div class="visitorscounter">
+            <script type="text/javascript" src="https://www.counters-free.net/count/3ccx"></script><br>
+            <script type='text/javascript' src='https://whomania.com/ctr?id=95e64a25e2a3a6109f499d3f5c108705d71baa3c'></script>
+        </div>    
+      </center>
     </div>
 
   </div>
