Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -213,8 +213,9 @@ audio {
         
       <center>
         <div class="visitorscounter">
-            <script type="text/javascript" src="https://www.counters-free.net/count/3ccx"></script><br>
-            <script type='text/javascript' src='https://whomania.com/ctr?id=95e64a25e2a3a6109f499d3f5c108705d71baa3c'></script>
+            <script type="text/javascript" src="https://www.counters-free.net/count/3ccy"></script>
+            <br>
+            <script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>
         </div>    
       </center>
     </div>
