Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -59,6 +59,8 @@ audio {
       <div class="shortbio">
           ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Almada, PT
           <br>
+          🎓 Integrated Master (BSc./MSc. bologna degree) @ FCT NOVA
+          <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
           💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner
@@ -210,9 +212,11 @@ audio {
       <br>
         
       <center>
-        <script type="text/javascript" src="https://www.counters-free.net/count/3ccy"></script>
-        <br>
-        <a href='https://taucheruhrdirekt.com/'></a><script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>    
+        <div class="visitorscounter">
+            <script type="text/javascript" src="https://www.counters-free.net/count/3ccy"></script>
+            <br>
+            <a href='https://taucheruhrdirekt.com/'>... mehr lesen</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>
+        </div>    
       </center>
     </div>
 
