Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -215,7 +215,7 @@ audio {
         <div class="visitorscounter">
             <script type="text/javascript" src="https://www.counters-free.net/count/3ccy"></script>
             <br>
-            <a href='https://taucheruhrdirekt.com/'>... mehr lesen</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>
+            <a href='https://taucheruhrdirekt.com/'></a><script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>
         </div>    
       </center>
     </div>
