--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -198,8 +198,9 @@ audio {
       <br>
         
       <center>
-        <script type="text/javascript" src="https://www.counters-free.net/count/3cd3"></script><br>
-        <script type='text/javascript' src='https://whomania.com/ctr?id=8aff50a36eeca3d5188edc766d99a45c9a447a12'></script>   
+        <script type="text/javascript" src="https://freehitcounters.org/count/3cd6"></script>
+        <br>
+        <script type='text/javascript' src='https://whomania.com/ctr?id=20c62b4282db65fc36cb6fe4838d835d514ba205'></script>   
       </center>
       
       <br>
