--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -198,9 +198,8 @@ audio {
       <br>
         
       <center>
-        <script type="text/javascript" src="https://freehitcounters.org/count/3cd6"></script>
-        <br>
-        <script type='text/javascript' src='https://whomania.com/ctr?id=20c62b4282db65fc36cb6fe4838d835d514ba205'></script>   
+        <script type="text/javascript" src="https://www.counters-free.net/count/3cda"></script><br>
+        <script type="text/javascript" src="https://www.whomania.com/ctr?id=c5907ff6cb1e8ecde1204c13e775e967bcc89f42"></script>
       </center>
       
       <br>
