--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -196,6 +196,16 @@ audio {
       </div>
       
       <br>
+        
+      <center>
+        <div class="visitorscounter">
+            <script type="text/javascript" src="https://www.counters-free.net/count/3ccy"></script>
+            <br>
+            <a href='https://taucheruhrdirekt.com/'></a><script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>
+        </div>    
+      </center>
+      
+      <br>
       
       <center>
           <div class="sidebarinfoinstructions">
@@ -210,12 +220,5 @@ audio {
 
   </div>
 
-  <br>
-        
-    <center>
-        <script type="text/javascript" src="https://www.counters-free.net/count/3cda"></script><br>
-        <script type="text/javascript" src="https://www.whomania.com/ctr?id=c5907ff6cb1e8ecde1204c13e775e967bcc89f42"></script>
-    </center>
-      
   <div id="switcher"></div>
 </aside>
