Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -199,9 +199,8 @@ audio {
         
       <center>
         <div class="visitorscounter">
-            <script type="text/javascript" src="https://www.counters-free.net/count/3ccy"></script>
-            <br>
-            <a href='https://taucheruhrdirekt.com/'></a><script type='text/javascript' src='https://www.whomania.com/ctr?id=482a9056389a6d5e8ff089259b990aa85b104e92'></script>
+            <script type="text/javascript" src="https://www.stat-counter.org/count/3cdc"></script><br>
+ <a href='https://taucheruhrdirekt.com/'>... mehr lesen</a> <script type='text/javascript' src='https://whomania.com/ctr?id=e6b7f92a6decb9e7dfae003aa16e43437aa78100'></script>
         </div>    
       </center>
       
