--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -200,11 +200,9 @@ audio {
       <center>
         <div class="visitorscounter">
             <script type="text/javascript" src="https://www.stat-counter.org/count/3cdc"></script><br>
- <a href='https://taucheruhrdirekt.com/'>... mehr lesen</a> <script type='text/javascript' src='https://whomania.com/ctr?id=e6b7f92a6decb9e7dfae003aa16e43437aa78100'></script>
+            <script type='text/javascript' src='https://whomania.com/ctr?id=e6b7f92a6decb9e7dfae003aa16e43437aa78100'></script>
         </div>    
       </center>
-      
-      <br>
       
       <center>
           <div class="sidebarinfoinstructions">
