--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -200,7 +200,7 @@ audio {
       <center>
         <div class="visitorscounter">
             <script type="text/javascript" src="https://www.stat-counter.org/count/3cdc"></script><br>
-            <script type='text/javascript' src='https://whomania.com/ctr?id=e6b7f92a6decb9e7dfae003aa16e43437aa78100'></script>
+            <a href='https://taucheruhrdirekt.com/'></a> <script type='text/javascript' src='https://whomania.com/ctr?id=e6b7f92a6decb9e7dfae003aa16e43437aa78100'></script>
         </div>    
       </center>
       
