Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -199,10 +199,12 @@ audio {
         
       <center>
         <div class="visitorscounter">
-            <script type="text/javascript" src="https://www.stat-counter.org/count/3cdc"></script><br>
-            <a href='https://taucheruhrdirekt.com/'></a> <script type='text/javascript' src='https://whomania.com/ctr?id=e6b7f92a6decb9e7dfae003aa16e43437aa78100'></script>
+            <script type="text/javascript" src="https://free-hit-counters.net/count/3cdh"></script><br>
+            <script type='text/javascript' src='https://www.whomania.com/ctr?id=e05ff7988834780d3b68a37502592d798681c8b7'></script>
         </div>    
       </center>
+      
+      <br>
       
       <center>
           <div class="sidebarinfoinstructions">
