--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -200,7 +200,7 @@ audio {
       <center>
         <div class="visitorscounter">
             <script type="text/javascript" src="https://free-hit-counters.net/count/3cdh"></script><br>
-            <script type='text/javascript' src='https://www.whomania.com/ctr?id=e05ff7988834780d3b68a37502592d798681c8b7'></script>
+            <a href='https://taucheruhrdirekt.com/'> </a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=e05ff7988834780d3b68a37502592d798681c8b7'></script>
         </div>    
       </center>
       
