Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -198,6 +198,11 @@ audio {
       <br>
       
       <center>
+          
+          <!-- BEGIN Free Counter Code! counter -->
+            <script type="text/javascript" src="https://freecountercode.com/service/mF6tw54T0DeblZ9Qxy81"></script>
+          <!-- END Free Counter Code! counter -->
+          
           <div class="sidebarinfoinstructions">
             *** Click in the right side of this tab, to open/close it ***
             <br>
