Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -57,6 +57,8 @@ audio {
         
       <hr/>
       <div class="shortbio">
+          ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Almada, PT
+          <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
           💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner
@@ -107,7 +109,7 @@ audio {
       <hr/>
         
       <div class="w3-container w3-xlarge w3-padding">
-          <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro/" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
+          <!--<a target="_blank" href="https://www.facebook.com/rubenandrebarreiro/" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/ruben.badnewz/" title="Rúben BadNewz on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben BadNewz on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle/" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.streetwear.clothing/" title="BadNewz Streetwear Clothing on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Streetwear Clothing on Facebook"></i></a>
@@ -132,7 +134,7 @@ audio {
           
           
           <br>
-          
+          -->
 		  <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
           <a target="_blank" href="https://badnewz-lifestyle.com/" title="BadNewz Lifestyle on WordPress"><i class="fa fa-wordpress w3-hover-text-blue" title="BadNewz Lifestyle on WordPress"></i></a>
           <a target="_blank" href="https://www.reddit.com/user/ruben_barreiro_92" title="Rúben André Barreiro (BadNewz) on Reddit"><i class="fa fa-reddit w3-hover-text-gray" title="Rúben André Barreiro (BadNewz) on Reddit"></i></a>
