Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
@@ -76,7 +76,7 @@ body {
     text-align: right;
 }
 
-#motion_settings,
+#motions_settings,
 #show_and_display_settings,
 #specific_options {
     color: #ff0060;
