Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
@@ -1,3 +1,16 @@
+/*
+
+    LEARNING QUANTUM COMPUTING (ONLINE WEB COURSE)
+    GROUND AND EXCITED STATES OF AN ION
+
+    AUTHOR:
+    - RUBEN ANDRE BARREIRO
+
+    © COPYRIGHTS - ALL RIGHTS RESERVED
+
+*/
+
+
 html,
 body {
     width: 100%;
