Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
@@ -95,6 +95,16 @@ body {
     color: #ff0060;
 }
 
+#copyrights {
+    color: #ff0060;
+    position: fixed;
+    bottom: 5px;
+    left: 50%;
+    padding: 5px;
+    box-sizing: border-box;
+    text-align: center; 
+}
+
 a {
     color: darkorange;
 }
