--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.css
@@ -97,12 +97,11 @@ body {
 
 #copyrights {
     color: #ff0060;
-    position: fixed;
+    position: absolute;
     bottom: 5px;
-    left: 35%;
+    width: 100%;
     padding: 5px;
     box-sizing: border-box;
-    text-align: center; 
 }
 
 a {
