--- a/projects/threejs/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators.css
+++ b/projects/threejs/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators.css
@@ -123,7 +123,20 @@ body {
 	position:relative;
 	top:1px;
 }
+.pauli_i_operator:disabled {
+	display: inline-block;
+    background-color: #b6adb4;
+    border: 0px;
+    color: #fff !important;
+    opacity: 0.5;
+    cursor: none;
+}
 
 a {
     color: darkorange;
+}
+
+a:disabled, a[disabled='disabled'] {
+	background:linear-gradient(to bottom, #000000 5%, #bbbbbb 100%);
+	background-color:#dddddd;
 }
