--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -57,13 +57,13 @@ audio {
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 🎂 27 years | 🏠 From Lisbon, PT | 📍 Living in Almada, PT
+          ♏ 90's | 👨‍💻 IT/IS & Computer Engineer | 🎓 NOVA
           <br>
-          💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
+          👔 Fashioner | 💭 Influencer | 🗣️ Motivator | 💡 Promoter
           <br>
-          💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner
+          🖌️ Designer | 🎨 Artist | ✍️ Blogger | ✈️ Traveler
           <br>
-          ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete | 🚶 Model
+          📸 Photographer | 🎥 Producer | 👤 Model | 🏋️‍♂️ Athlete
       </div>
       <hr/>
     
