Some minor changes added
Some minor changes added

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -57,7 +57,7 @@ audio {
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 👨‍💻 IT/IS & Computer Engineer | 🎓 NOVA
+          ♏ 90's | 👨‍💻 IT/IS & Computer Engineer | 🎓 FCT NOVA | 🏢 UT Austin Portugal
           <br>
           👔 Fashioner | 💭 Influencer | 🗣️ Motivator | 💡 Promoter
           <br>
