--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -57,7 +57,7 @@ audio {
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 👨‍💻 IT/IS & Computer Engineer | 🎓 FCT NOVA | 🏢 UT Austin Portugal
+          ♏ 90's | 👨‍💻 IT/IS & Computer Engineer | 🎓 FCT NOVA | ⚛️ R&amp;D in Quantum Computing 
           <br>
           👔 Fashioner | 💭 Influencer | 🗣️ Motivator | 💡 Promoter
           <br>
